<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/answerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#245689"
    android:foregroundGravity="center"
    android:textAlignment="textEnd"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="353dp"
        android:layout_height="625dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="297dp"
            android:layout_height="79dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="35dp"
            android:background="#a8a8a8"
            android:minHeight="79dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ansView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:minHeight="41dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <Button
                android:id="@+id/on_off"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#D7D7D7"
                android:text="@string/power"
                android:textColor="#020202" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onOff">

            <Button
                android:id="@+id/_7"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"

                android:backgroundTint="#D7D7D7"
                android:text="@string/_7"
                android:textColor="#020202" />

            <Button
                android:id="@+id/_8"
                style="?android:attr/buttonBarButtonStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/_8"
                android:textColor="#020202" />

            <Button
                android:id="@+id/_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/_9"
                android:textColor="#020202" />

            <Button
                android:id="@+id/operation1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/slash"
                android:textColor="#020202" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <Button
                android:id="@+id/_4"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"

                android:backgroundTint="#D7D7D7"
                android:text="@string/_4"
                android:textColor="#020202" />

            <Button
                android:id="@+id/_5"
                style="?android:attr/buttonBarButtonStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/_5"
                android:textColor="#020202" />

            <Button
                android:id="@+id/_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/_6"
                android:textColor="#020202" />

            <Button
                android:id="@+id/operation2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/multiply"
                android:textColor="#020202"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <Button
                android:id="@+id/_1"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"

                android:backgroundTint="#D7D7D7"
                android:text="@string/_1"
                android:textColor="#020202" />

            <Button
                android:id="@+id/_2"
                style="?android:attr/buttonBarButtonStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/_2"
                android:textColor="#020202" />

            <Button
                android:id="@+id/_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/_3"
                android:textColor="#020202" />

            <Button
                android:id="@+id/operation3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/minus"
 
                android:textColor="#020202" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <Button
                android:id="@+id/_0"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"

                android:backgroundTint="#D7D7D7"
                android:text="@string/_0"
                android:textColor="#020202"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/operation0"
                style="?android:attr/buttonBarButtonStyle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/point"
                android:textColor="#020202" />

            <Button
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/equal"
                android:textColor="#020202" />

            <Button
                android:id="@+id/operation4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#D7D7D7"
                android:text="@string/plus"
                android:textColor="#020202" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
